basic field mapping

--- a/AnyTree/anytree/test/test_mapping.yml
+++ b/AnyTree/anytree/test/test_mapping.yml
@@ -4,6 +4,8 @@ base:
         res_partner.name: return lines['res_users']['login']
     res_users.partner_id:
         res_partner.id: return lines['res_users']['partner_id']
+    res_users.address_id:
+        res_partner.id: return lines['res_users']['address_id']
     res_partner.address_id:
         res_partner.id: return lines['res_partner_address']['partner_id']
     res_partner.date:
