--- a/AnyTree/anytree/test/test_mapping.yml
+++ b/AnyTree/anytree/test/test_mapping.yml
@@ -1,13 +1,15 @@
 base:
+    res_users.id:
+        res_users.id:
     res_users.login:
-        res_users.name: return lines['res_users']['login'].lower()
-        res_partner.name: return lines['res_users']['login']
+        res_users.name: return line['login'].lower()
+        res_partner.name: return line['login']
     res_users.partner_id:
-        res_partner.id: return lines['res_users']['partner_id']
+        res_partner.id: return line['partner_id']
     res_users.address_id:
-        res_partner.id: return lines['res_users']['address_id']
+        res_partner.id: return line['address_id']
     res_partner.address_id:
-        res_partner.id: return lines['res_partner_address']['partner_id']
+        res_partner.id: return line['partner_id']
     res_partner.date:
         res_partner.login_date:
     res_partner.name:
@@ -18,6 +20,6 @@ base:
         res_partner.parent_id:
 mail:
     res_users.login:
-        mail_alias.alias: return lines['res_users']['login']
+        mail_alias.alias: return line['login']
 
 
