--- a/AnyTree/anytree/test/partial_wildcard.yml
+++ b/AnyTree/anytree/test/partial_wildcard.yml
@@ -8,7 +8,7 @@ base:
     res_partner.id:
         res_partner.id:
     res_partner.address_id:
-        res_partner.id: return line['partner_id']
+        res_partner.id: return source_row['partner_id']
     res_partner.date:
         res_partner.login_date:
     res_partner.name:
@@ -19,9 +19,9 @@ base:
     res_partner_address.*:
         res_partner.*:
     res_partner_address.name:
-        res_partner.name: return line['res_partner_address']['name']
+        res_partner.name: return source_row['res_partner_address']['name']
     res_partner_address.partner_id:
         res_partner.parent_id:
 mail:
     res_users.login:
-        mail_alias.alias: return line['login']
+        mail_alias.alias: return source_row['login']
