--- a/AnyTree/anytree/test/test_mapping.yml
+++ b/AnyTree/anytree/test/test_mapping.yml
@@ -1,8 +1,9 @@
 base:
     res_users.id:
+        # this allows to link the new partner with the existing user
         res_users.partner_id:
         res_partner.id: |
-            i = newid()
+            i = newid('res_partner')
             target_rows['res_users']['partner_id'] = i
             target_rows['res_partner']['id'] = i
             return i
@@ -11,6 +12,7 @@ base:
         res_partner.name: return source_row['login']
     res_users.name:
         res_partner.name:
+        res_users.name:
     res_users.partner_id:
         res_partner.id: return source_row['partner_id']
     res_users.address_id:
