--- a/.hgignore
+++ b/.hgignore
@@ -2,6 +2,8 @@ sandbox/
 .*\.swp$
 .*\.pyc$
 .*\#$
-AnyTree/PyYAML.*
-AnyTree/AnyTree.egg-info/
-AnyTree/psycopg2
+anygrate/PyYAML
+anygrate/anygrate.egg-info/
+anygrate/psycopg2
+anygrate/openobject_library-
+anygrate/Anygrate.egg-info
