--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -69,3 +69,131 @@ mail:
     res_users.login:
         mail_alias.alias: return source_row['login']
 
+     
+account:
+    account_account.*:
+    account_bank_statement.*:
+    account_bank_statement.closing_details_ids:
+        #account_bank_statement.closing_details_ids:
+        account_cashbox_line.bank_statement_id:
+    account_bank_statement.details_ids:
+        account_cashbox_line.details_id:
+    account_bank_statement.message_ids:
+        mail.message_id:
+    account_bank_statement.opening_details_ids:
+        account_cashbox_line.opening_details_id: #A vérifier
+    account_bank_statement.starting_details_ids: false
+    account_bank_statement.ending_details_ids: false
+       
+    account_cashbox_line.*:
+    account_cashbox_line.bank_statement_id:
+        account_bank_statement.bank_statement_ids: # A vérifier
+    account_cashbox_line.number: false
+    account_cashbox_line.ending_id: false
+    account_cashbox_line.starting_id: false
+    account_cashbox_line.id:
+        account_cashbox_line.id:
+        account_cashbox_line.number_closing:
+        account_cashbox_line.number_opening:
+    
+    account_chart_template.*:
+    account_chart_template.property_reserve_and_surplus_account: false
+    
+    account_invoice.*:
+    account_invoice.address_contact_id: false
+    account_invoice.address_invoice_id: false
+    account_invoice.message_ids:
+        mail.message_id:
+    account_invoice.id:
+        account_invoice.id:
+        account_invoice.send: #new:true or false
+        account_invoice.supplier_invoice_number: #new
+    
+    account_invoice_line.*:
+    account_invoice_line.name:
+        account_invoice_line.name: #cmt changer le type char en text ??
+    account_invoice_line.note: false
+    
+    account_invoice_report.*:
+    account_invoice_report.address_contact_id: false
+    account_invoice_report.address_invoice_id: false
+    account_invoice_report.delay_to_pay: false
+    account_invoice_report.due_delay: false
+    
+    account_invoice_tax.*:
+    account_invoice_tax.account_analytic_id:
+        account_analytic_account.account_analytic_ids: # A verifier
+
+    account_journal.*:
+    account_journal.auto_cash:
+        account_journal.auto_cash:
+    account_journal.id:
+        account_journal.cash_control: #new : boolean
+        account_journal.with_last_closing_balance: #new: boolean
+    account_journal.cashbox_line_ids:
+        account_journal_cashbox_line.cashbox_line_id:
+    account_journal.internal_account_id:
+        account_account.internal_account_ids: # Pas tres sur
+    account_journal.loss_account_id:
+        account_account.loss_account_ids:   # Pas tres sur
+    account_journal.profit_account_id:
+        account_account.profit_account_ids: # Pas tres sur
+        
+    account_journal_cashbox_line.*:
+    account_journal_cashbox_line.id:
+        account_journal_cashbox_line.id:
+        account_journal_cashbox_line.pieces: #new : float
+    account_journal_cashbox_line.journal_id:
+        account_journal_cashbox_line.journal_id:
+        account_journal.journal_id:
+    
+    account_move_reconcile.*:
+    account_move_reconcile.id:
+        account_move_reconcile.id:
+        account_move_reconcile.opening_reconciliation: #new
+    
+    account_tax.*:
+    account_tax.account_analytic_collected_id:
+        account_analytic_account.account_analytic_collected_ids:
+    account_tax.account_analytic_paid_id:
+        account_analytic_account.account_analytic_paid_ids:
+        
+    res_company.expects_chart_of_accounts: true #car on suppose que le plan comptable est déjà installé
+    res_company.tax_calculation_rounding_method: return 'round_globally' #NEW selection_keys: ['round_globally', 'round_per_line']
+    
+    account_account_type.*:
+    account_account_type.name:
+        account_account_type.report_type: return "receivable"
+        
+    account_journal_view.*:
+    account_journal_view.view_id: false
+    account_journal_column.*:
+ 
+account_accountant.*:
+
+account_analytic_analysis.*:
+
+    account_analytic_account.*:
+    account_analytic_account.id:
+        accound_analytic_account.id:
+        account_analytic_account.fix_price_invoices:    #new: boolean
+        account_analytic_account.hours_qtt_est:    #new: float
+        account_analytic_account.invoice_on_timesheets:    #new: boolean
+
+account_analytic_default.*:
+
+account_analytic_plans.*:
+
+account_anglo_saxon.*:
+
+account_asset.*:
+    account_asset_depreciation_line.*:
+    account_asset_depreciation_line.depreciation_date:
+    
+    
+    
+    
+    
+    
+    
+    
