authors, licence, doc

--- a/.hgignore
+++ b/.hgignore
@@ -7,3 +7,4 @@ anygrate/anygrate.egg-info/
 anygrate/psycopg2
 anygrate/openobject_library-
 anygrate/Anygrate.egg-info
+anybox.migration.openerp.egg-info
