Add mapping of module sale, stock, account.

--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -65,11 +65,12 @@ base:
     res_company.rml_footer1:
         res_company.rml_footer:
 
+# Module mail
 mail:
     res_users.login:
         mail_alias.alias: return source_row['login']
 
-     
+# Module account 
 account:
     account_account.*:
     account_bank_statement.*:
@@ -168,11 +169,14 @@ account:
     account_journal_view.*:
     account_journal_view.view_id: false
     account_journal_column.*:
- 
+
+# Module account_accountant
 account_accountant:
+    account_accountant.*:
 
+# Module account_analytic_analysis
 account_analytic_analysis:
-
+    account_analytic_analysis.*:
     account_analytic_account.*:
     account_analytic_account.id:
         accound_analytic_account.id:
@@ -180,20 +184,326 @@ account_analytic_analysis:
         account_analytic_account.hours_qtt_est:    #new: float
         account_analytic_account.invoice_on_timesheets:    #new: boolean
 
+# Module account_analytic_default
 account_analytic_default:
+    account_analytic_default.*:
 
+# Module account_analytic_plans
 account_analytic_plans:
+    account_analytic_plans.*:
 
+# Module account_anglo_saxon
 account_anglo_saxon:
+    account_anglo_saxon.*:
 
+# Module account_asset
 account_asset:
+    account_asset.*:
     account_asset_depreciation_line.*:
     account_asset_depreciation_line.depreciation_date:
+    	account_asset_depreciation_line.depreciation_date: #change type char to date
+
+# Module account_bank_statement_extensions
+account_bank_statement_extensions:
+    account_bank_statement_extensions.*:
+    account_bank_statement_line.*:
+    account_bank_statement_line.journal_id:
+        account.account_bank_statement_extensions:
+        
+# Module account_budget
+account_budget:
+    account_budget.*:
     
+# Module account_cancel
+ account_cancel:
+    account_cancel.*:
+  
+# Module account_chart
+account_chart:
+    account_chart.*:
+  
+# Module account_check_writing
+account_check_writing:
+    account_check_writing.*:
+ 
+# Module account_followup
+account_followup:
+    account_followup.*:
+    account_followup_followup.*:
+    account_followup_followup.description: false
+    account_followup_followup.name:
+        account_followup_followup.name:     # Change type char to float
+    account_followup_followup_line.*:
+    account_followup_followup_line.delay:
+        account_followup_followup_line.delay: return 0 # now required
+    account_followup_followup_line.email_template_id:
+        email_template.email_template_ids:
+        account_followup_followup_line.manual_action:  # new, boolean
+        account_followup_followup_line.manual_action_note:  # new, text
+        account_followup_followup_line.send_email:     # new, boolean
+        account_followup_followup_line.send_letter:    # new, boolean
+    account_followup_followup_line.manual_action_responsible_id:
+        res_users.manual_action_responsible_ids:
     
+    res_compny.follow_up_msg: false
+    res_partner.payment_next_action:    #new, text
+    res_partner.payment_next_action_date:   #new, date
+    res_partner.payment_note:   #new, text
+    res_partner.payment_responsible_id:
+        res_users.payment_responsible_ids:
+    res_partner.unreconciled_aml_ids:
+        account_move_line.unreconciled_aml_id:
     
-    
-    
-    
-    
-    
+# Module account_payment
+account_payment:
+    account_payment.*: 
+  
+# Module account_sequence
+account_sequence:
+    account_sequence.*: 
+  
+# Module account_test
+account_test:
+    account_test.*:
+  
+# Module account_voucher
+account_voucher:
+    account_voucher.*:
+    account_voucher.active:     #new, boolean
+    account_voucher.message_ids:
+        mail_message.message_id:
+ 
+# Module analytic
+analytic:
+    analytic.*:
+    account_analytic_account.*:
+    account_analytic_account.contact_id:
+        account_analytic_account.contact_id:    #DEL relation: res.partner.address
+    account_analytic_account.manager_id:
+        res_users.manager_ids:
+    account_analytic_account.message_ids: 
+        mail_message.message_id:   
+    account_analytic_account.template_id:
+        account_analytic_account.template_ids:
+    account_analytic_account.type: return 'normal' #now required, default = normal
+  
+# Module analytic_contract_hr_expense
+analytic_contract_hr_expense:
+    analytic_contract_hr_expense.*:
+    account_analytic_account.id:
+        account_analytic_account.id:
+        account_analytic_account.charge_expenses:   # new, boolean
+        account_analytic_account.est_expenses:    # new, float
+  
+# Module analytic_user_function
+analytic_user_function:
+    analytic_user_function.*:
+    analytic_user_funct_grid.id:
+        analytic_user_funct_grid.id:
+        analytic_user_funct_grid.price:     #NEW required: required (float)
+  
+# Module sale
+sale:
+    sale.*:
+    res_company.security_lead:
+        res_company.security_lead:
+        sale_stock.security_lead:  
+    res_partner.sale_order_ids:
+        sale_order.sale_order_id:
+    sale_order.incoterm:
+        sale_order.incoterm:
+    sale_order.message_ids:
+        mail_message.message_ids:   #selection_keys is now '['manual']' ('['manual', 'picking', 'postpaid', 'prepaid']')
+    sale_order.invoice_quantity:
+        sale_order.invoice_quantity: # selection_keys is now '['order']' ('['order', 'procurement']')
+    sale_order.partner_invoice_id:
+        res_partner.partner_invoice_ids:
+    sale_order.partner_order_id:
+        sale_order.partner_order_id:
+    sale_order.partner_shipping_id:
+        sale_order.partner_shipping_id:
+        res_partner.partner_shipping_id:
+    sale_order.picked_rate:
+        sale_stock.picked_rate:
+    sale_order.picking_ids:
+        sale_order.picking_ids:
+        sale_stock.picking_ids:     # pas tres sur
+        stock_picking.picking_ids:  # pas tres sur
+    sale_order.picking_policy:
+        sale_order.picking_policy:
+        sale_stock.picking_policy:
+    sale_order.shipped:
+        sale_order.shipped:
+        sale_stock.shipped:
+    sale_order.state:
+        sale_order.state:   #  selection_keys is now '['cancel', 'done', 'draft', 'invoice_except', 'manual', 'progress', 'sent', 'waiting_date']'
+    sale_order_line.address_allotment_id:
+        sale_order_line.address_allotment_id:
+        res_partner.address_allotment_ids:
+    address_allotment_id
+    sale_order_line.delay:
+        sale_order_line.delay:
+        sale_stock.delay:
+    sale_order_line.move_ids:
+        sale_order_line.move_ids:
+        sale_stock.move_id:
+    sale_order_line.name:
+        sale_order_line.name:   # change type char to text
+    sale_order_line.notes: false
+    sale_order_line.number_packages:
+        sale_order_line.number_packages:
+        sale_stock.number_packages:
+    sale_order_line.procurement_id:
+        sale_order_line.procurement_id:
+        sale_stock.procurement_ids:
+    sale_order_line.product_packaging:
+        sale_order_line.product_packaging:
+        sale_stock.product_packaging:
+    sale_order_line.property_ids:
+        sale_order_line.property_ids:
+        sale_order.property_ids:
+    sale_report.shipped_qty_1:
+        sale_report.shipped_qty_1:
+        sale_stock.shipped_qty_1:
+    sale_report.shipped:
+        sale_report.shipped:
+        sale_stock.shipped:
+    sale_report.state:
+        sale_report.state:      #selection_keys is now '['cancel', 'done', 'draft', 'invoice_except', 'manual', 'progress', 'waiting_date']
+    sale_shop.warehouse_id:
+        sale_shop.warehouse_id:
+        sale_stock.warehouse_ids:
+    stock_move.sale_line_id:
+        stock_move.sale_line_id:
+        sale_stock.sale_line_ids:
+    stock_picking.sale_id:
+        stock_picking.sale_id:
+        sale_stock.sale_ids:
+        
+# Module stock
+stock:
+    stock.*:
+    report_stock_inventory.*:
+    report_stock_inventory.month:
+        report_stock_inventory.month:   #selection_keys is now '['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12']'
+    report_stock_inventory.partner_id:
+        report_stock_inventory.partner_id:
+        res_partner.partner_id:
+        report_stock_inventory.scrap_location:  #new, not required
+    report_stock_move.partner_id:
+        report_stock_move.partner_id:
+        res_partner.partner_ids:
+    stock_location.address_id:
+        stock_location.address_id:
+    stock_location.partner_id:
+        stock_location.partner_id:
+        res_partner.partner_ids:
+    stock_move.address_id:
+        stock_move.address_id:
+    stock_picking.address_id:
+        stock_picking.address_id:
+    stock_picking.message_ids:
+        stock_picking.message_ids:
+        mail_messade.message_ids:
+    stock_picking_in.id:
+        stock_picking_in.id:
+        stock_picking_in.auto_picking:      #new, boolean
+        stock_picking_in.date:      #new, datetime
+        stock_picking_in.date_done:      #new, datetime
+        stock_picking_in.invoice_state:     # NEW required: required, selection_keys: ['2binvoiced', 'invoiced', 'none']
+        stock_picking_in.move_type: return 'direct' # new required: required, selection_keys: ['direct', 'one'], req_default: direct
+        stock_picking_in.name:      # new, char
+        stock_picking_in.note:      # new, text
+        stock_picking_in.origin:    # new, char 
+        stock_picking_in.state:     #new selection_keys: ['assigned', 'auto', 'cancel', 'confirmed', 'done', 'draft']
+    stock_picking_in.location_dest_id:
+        stock_picking_in.location_dest_id:
+        stock_location.location_dest_ids:       
+    stock_picking_in.location_id:
+        stock_picking_in.location_id:
+        stock_location.location_ids:
+    stock_picking_in.location_id:
+        stock_picking_in.location_id:
+        stock_location.location_ids:
+    stock_picking_in.message_ids:
+        stock_picking_in.message_ids:
+        mail_message.message_id:
+    stock_picking_in.move_lines:
+        stock_picking_in.move_lines:
+        stock_move.move_line:
+    stock_picking_in.partner_id:
+        stock_picking_in.partner_id:
+        res_partner.partner_id:
+    stock_picking_in.stock_journal_id:
+        stock_picking_in.stock_journal_id:
+        stock_journal.stock_journal_id:
+        stock_picking_in.type: return 'in' # required: required, selection_keys: ['in', 'internal', 'out'], req_default: in
+        stock_picking_out.auto_picking:      # new, boolean
+        stock_picking_out.date:     #new, datetime
+        stock_picking_out.date_done:    #new, datetime
+        stock_picking_out.name:      # new, char
+        stock_picking_out.note:      # new, text
+        stock_picking_out.origin:    # new, char 
+    stock_picking_out.backorder_id:
+        stock_picking_out.backorder_id:
+        stock_picking_out.backorder_ids:    # pas tres sur
+    stock_picking_out.company_id:
+        stock_picking_out.company_id:
+        res_company.company_id:
+    stock_picking_out.invoice_state:
+        stock_picking_out.invoice_state:    # new required: required, selection_keys: ['2binvoiced', 'invoiced', 'none']
+    stock_picking_out.location_dest_id:
+        stock_picking_out.location_dest_id:
+        stock_location.location_dest_ids:       
+    stock_picking_out.location_id:
+        stock_picking_out.location_id:
+        stock_location.location_ids:
+    stock_picking_out.location_id:
+        stock_picking_out.location_id:
+        stock_location.location_ids:
+    stock_picking_out.message_ids:
+        stock_picking_out.message_ids:
+        mail_message.message_id:
+    stock_picking_out.move_lines:
+        stock_picking_out.move_lines:
+        stock_move.move_line:
+    stock_picking_out.partner_id:
+        stock_picking_out.partner_id:
+        res_partner.partner_id:
+    stock_picking_out.stock_journal_id:
+        stock_picking_out.stock_journal_id:
+        stock_journal.stock_journal_id:
+        stock_picking_out.type: return 'out' # required: required, selection_keys: ['in', 'internal', 'out'], req_default: out  
+    stock_picking_out.state:
+        stock_picking_out.state:        #new selection_keys: ['assigned', 'auto', 'cancel', 'confirmed', 'done', 'draft']
+    stock_warehouse.partner_address_id:
+        stock_warehouse.partner_address_id:
+    stock_warehouse.partner_id:
+        stock_warehouse.partner_id:
+        res_partner.partner_ids:
+
+    stock_picking_in.backorder_id:
+        stock_picking_in.backorder_id:
+        stock_picking_in.backorder_ids:     # pas tres sur
+    stock_picking_in.company_id:
+        stock_picking_in.company_id:
+        res_company.company_ids:
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
