Few changes, add some base third tables to the mapping

--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -64,6 +64,12 @@ base:
         res_company.logo_web:
     res_company.rml_footer1:
         res_company.rml_footer:
+    
+    # Tables de jointures 
+    res_groups_users_rel.*:
+    res_company_users_rel.*:
+    res_partner_category_rel.*:
+    res_groups_implied_rel.*:
 
 # Module mail
 mail:
