Add models to disc-mapping

--- a/anygrate/mappings/disc-openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/disc-openerp6.1-openerp7.0.yml
@@ -2,3 +2,13 @@ res_users:
     login
 res_partner:
     name
+res_groups:
+    name
+account_account:
+    name
+res_country:
+    name
+res_partner_title:
+    name
+res_company:
+    name
